# hakkaa-firmware

./: Cargo.toml
examples/: pomodoro.rs  shake-detection.rs
src/: board.rs
